monitoring/configs/base/grafana/networking.yaml
apiVersion: v1
kind: Service
metadata:
  name: grafana-svc
spec:
  selector:
    app.kubernetes.io/instance: kube-prometheus-stack
    app.kubernetes.io/name: grafana
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 3000

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-staging"
    # Añadimos ambas versiones de la anotación 'ignore' por compatibilidad
    external-dns.alpha.kubernetes.io/ignore: "true"
spec:
  ingressClassName: traefik
  rules:
    - host: "grafana.example.com"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: grafana-svc
                port:
                  name: http
  tls:
    - hosts:
        - "grafana.example.com"
      secretName: grafana-tls
